# epigeec

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.rst  build_manylinux.sh  build_wheel.sh  build_wheels.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  report-results.yml  report_results.yml
debug/: Dockerfile.cmake  Dockerfile.yum  build_image.sh  build_wheel.sh  debug_cibuildwheel.sh
epigeec/: __init__.py
epigeec/cc/bg_to_hdf5/: CMakeLists.txt  bg_to_hdf5.cc
epigeec/cc/bw_to_hdf5/: .bw_to_hdf5.cc.swp  CMakeLists.txt  bw_to_hdf5.cc
epigeec/cc/core/: CMakeLists.txt  bed_reader.cc  bed_reader.h  bedgraph_reader.cc  bedgraph_reader.h  bigwig_reader.cc  bigwig_reader.h  chrom_size.cc  chrom_size.h  filter_bitset.cc  filter_bitset.h  genomic_data_line.cc  genomic_data_line.h  genomic_dataset.cc  genomic_dataset.h  genomic_file_reader.cc  genomic_file_reader.h  genomic_file_reader_factory.cc  genomic_file_reader_factory.h  hdf5_dataset.cc  hdf5_dataset.h  hdf5_dataset_factory.cc  hdf5_dataset_factory.h  hdf5_reader.cc  hdf5_reader.h  hdf5_writer.cc  hdf5_writer.h  input_list.cc  input_list.h  utils.h
epigeec/cc/correlation/: CMakeLists.txt  correlation.cc
epigeec/cc/correlation_nm/: CMakeLists.txt  correlation_nm.cc
epigeec/cc/correlation_w/: CMakeLists.txt  correlation_w.cc
epigeec/cc/correlation_w_nm/: CMakeLists.txt  correlation_w_nm.cc
epigeec/cc/filter/: CMakeLists.txt  filter.cc
epigeec/lib/: libboost_container.so.1.61.0  libboost_filesystem.so.1.61.0  libboost_iostreams.so.1.61.0  libboost_system.so.1.61.0  libbwreader.dylib  libbz2.so.1  libc.so.6  libcore.dylib  libdl.so.2  libgcc_s.so.1  libgomp.so.1  libintlc.so.5  libm.so.6  libpthread.so.0  librt.so.1  libsz.so.2
epigeec/python/: example.conf
epigeec/python/core/: config.py  error.py  error_test.py  filter_hdf5.py  geec_corr.py  geec_tools.py  input_parser.py  launcher.py  main.py  make_matrix.py  parser.py  to_hdf5.py  utils.py  utils_test.py  validate.py  validators.py
epigeec/resource/chrom_sizes/: hg38.can.chrom.sizes  hg38.noy.chrom.sizes  mm10.can.chrom.sizes  mm10.ext.chrom.sizes  saccer3.can.chrom.sizes
epigeec/resource/filter/: hg19.all.bed  hg19.gene.bed  hg38.gene.bed  saccer3.all.bed
epigeec/test/: error_test.py  filter_test.py  test.py  utils_test.py
epigeec/test/files/: expected  expected_hg19  expected_nm  expected_w
epigeec/test/files/hdf5/: test.hdf5
epigeec/test/reports/: add_build_info_to_ctrf.py  ctrf-summary-template.hbs
resource/chrom_sizes/: hg19.ext.chrom.sizes  hg19.noy.chrom.sizes  hg38.ext.chrom.sizes  mm10.noy.chrom.sizes
resource/filter/: hg19.blklst.bed  hg19.tss.bed  hg38.all.bed  hg38.tss.bed  mm10.all.bed
test/: clean.sh  template.conf  test  test.py  test_list.txt
test/files/: expected  test.conf
