[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "epigeec"
dynamic = ["version"]
authors = [
    {name = "Jonathan Laperle", email = "jonathan.laperle@usherbrooke.ca"}
]
description = "Tools for fast NxN correlation of whole-genome epigenomic data."
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "h5py",
    "future",
]

[project.scripts]
epigeec = "epigeec.python.core.main:cli"

[tool.setuptools_scm]
write_to = "epigeec/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools]
include-package-data = false  # Don't auto-include everything

[tool.setuptools.packages.find]
where = ["."]
include = ["epigeec*"]
exclude = ["epigeec.test*", "epigeec.cc*"]  # Exclude test and C++ source from packages

[tool.setuptools.package-data]
epigeec = [
    "bin/*",
    "lib/*.so",
    "lib/*.so.*",
    "resource/chrom_sizes/*.sizes",
]

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux*", "*-manylinux_i686"] # ignore 32-bit Linux builds
before-build = [
    "pip install cmake",
    "cmake .",
    "make -j $(nproc || echo 4)",
]

[tool.cibuildwheel.linux]
archs = ["auto"] # handled in build matrix in GitHub Actions
manylinux-x86_64-image = "manylinux_2_28"  # manylinux2014 is deprecated since 2024
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum install -y hdf5-devel boost-devel"

[tool.cibuildwheel.macos]
archs = ["auto"]  # handled in build matrix in GitHub Actions
before-all = "brew install hdf5 boost"
environment = {CMAKE_PREFIX_PATH = "/opt/homebrew:/usr/local:/opt/local"}

[tool.pylint.main]
extension-pkg-allow-list = [
    "pyBigWig",
]
