CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "core" )
SET( PROJ_INCLUDES  "." "${CMAKE_SOURCE_DIR}/third_party/bwreader/include/bwreader" )
SET( PROJ_LIBRARIES "hdf5" "hdf5_hl" "bwreader" "boost_container")

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -Wall -std=c++11 -g" )

PROJECT( ${PROJ_NAME} )

FILE( GLOB_RECURSE PROJ_SOURCES *.cc )
FILE( GLOB_RECURSE PROJ_HEADERS *.h )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_LIBRARY( ${PROJ_NAME} SHARED ${PROJ_SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
