CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

SET( PROJ_NAME      "correlation_w" )
SET( PROJ_INCLUDES  "${CMAKE_SOURCE_DIR}/epigeec/cc/core" )
SET( PROJ_LIBRARIES "core")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -Wall -std=c++11 -g" )

FIND_PACKAGE(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

PROJECT( ${PROJ_NAME} )

FILE( GLOB_RECURSE PROJ_SOURCES *.cc )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
