CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

SET( PROJ_NAME      "filter" )
SET( PROJ_INCLUDES  "${CMAKE_SOURCE_DIR}/epigeec/cc/core" )
SET( PROJ_LIBRARIES "core" "boost_filesystem" "boost_system" )

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -Wall -std=c++11 -g" )

PROJECT( ${PROJ_NAME} )

FILE( GLOB_RECURSE PROJ_SOURCES *.cc )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
